# models

./: .clang_format.hook  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  README.cn.md  README.en.md  README.md  ci.yml  fastdeploy_en.md  requirements.txt  setup.cfg  setup.py
.pre-commit-hooks/: convert_markdown_into_html.py
.travis/: unittest.sh
PaddleAudio/: .gitignore  .pre-commit-config.yaml  README.md  README_en.md  requirements.txt  setup.py
PaddleCV/: README.md  options.py
PaddleKG/: README.md
PaddleNLP/: README.md  README_cn.md  README_en.md  reading_comprehension  requirements.txt
PaddleNLP/paddlenlp/ext_op/src/: CMakeLists.txt  fusion_decoding_op.cc  fusion_decoding_op.cu  pd_traits.h
PaddleRec/: README.md
PaddleST/: README.md
PaddleSlim/: .run_ce.sh  README.md  _ce.py  compress.py  reader.py  run.sh  utility.py
PaddleSpeech/: README.md
cnn_text/: README.md  infer.py  network_conf.py  reader.py  train.py  utils.py
community/: README.md  REPO_TEMPLATE_DESC.md
config_demo/: README.md  SSD_MobileNet.yml  config_api_example.py  config_dict.yml  config_dict_FPN.yml  config_dict_mask.yml  config_dict_ssd.yml  config_serialized.yml  faster-rcnn_ResNeXt50-C4.yml  faster-rcnn_ResNeXt50-FPN.yml  faster-rcnn_ResNet50-C4.yml  faster-rcnn_ResNet50-FPN.yml  faster-rcnn_ResNet50vb-C4.yml  faster_rcnn_r50_1x.yml  mask-rcnn_ResNet50-C4.yml  mask-rcnn_ResNet50-FPN_1x.yml  retinanet_resnet50_vb_fpn_1x.yml  ssd_mobilenet_v1_voc.yml  yolov3_DarkNet.yml  yolov3_MobileNet.yml  yolov3_ResNet34.yml
configs/: README.md  cascade-rcnn_ResNet50-FPN_1x.yml  cascade-rcnn_ResNet50A-FPN_1x.yml  cascade_rcnn_r50_fpn_1x.yml  debug_faster-rcnn_ResNet50-C4_1x.yml  faster-rcnn_ResNeXt101-C4_1x.yml  faster-rcnn_ResNeXt101-FPN_1x.yml  faster-rcnn_ResNeXt101-FPN_2x.yml  faster-rcnn_ResNet101-FPN_1x.yml  faster-rcnn_ResNet101-FPN_2x.yml  faster-rcnn_ResNet50-C4_1x.yml  faster-rcnn_ResNet50-C4_2x.yml  faster-rcnn_ResNet50-FPN_1x.yml  faster-rcnn_ResNet50-FPN_2x.yml  faster-rcnn_ResNetVd101-FPN_1x.yml  faster-rcnn_ResNetVd101-FPN_2x.yml  faster-rcnn_ResNetVd50-C4_1x.yml  faster-rcnn_ResNetVd50-FPN_2x.yml  faster-rcnn_SENet154-C4_1x.yml  faster-rcnn_SENet154-FPN_1-44x.yml  faster_rcnn_r101_1x.yml  faster_rcnn_r101_c4_1x.yml  faster_rcnn_r101_fpn_1x.yml  faster_rcnn_r101_fpn_2x.yml  faster_rcnn_r101_vd_fpn_1x.yml  faster_rcnn_r101_vd_fpn_2x.yml  faster_rcnn_r50_2x.yml  faster_rcnn_r50_c4_1x.yml  faster_rcnn_r50_c4_2x.yml  faster_rcnn_r50_fpn_1x.yml  faster_rcnn_r50_fpn_2x.yml  faster_rcnn_r50_vd_1x.yml  faster_rcnn_r50_vd_c4_1x.yml  faster_rcnn_r50_vd_fpn_2x.yml  faster_rcnn_resnet101_fpn_1x.yml  faster_rcnn_resnet101_fpn_2x.yml  faster_rcnn_resnet101_vd_fpn_1x.yml  faster_rcnn_resnet101_vd_fpn_2x.yml  faster_rcnn_resnet50_vd_fpn_2x.yml  faster_rcnn_resnext101_64x4d_fpn_1x.yml  (+27 more)
consistency/: design.md
conv_seq2seq/: README.md  beamsearch.py  download.sh  infer.py  model.py  preprocess.py  reader.py  train.py
conv_seq_to_seq/: README.md  infer.py  model.py  reader.py  train.py
ctc/: README.md  README.org  data_provider.py  decoder.py  index.html  model.py  train.py
ctr/: README.cn.md  README.md  README.org  avazu_data_processer.py  data_provider.py  dataset.md  dataset.org  index.html  infer.py  model.py  network_conf.py  process_markdown.py  reader.py  train.py  utils.py
dataset/: __init__.py  dataset.py
deep_fm/: README.cn.md  README.md  infer.py  network_conf.py  preprocess.py  reader.py  train.py
deep_speech_2/: Dockerfile  KenLMModel.py  README.md  evaluate.py  index.html  infer.py  setup.sh  train.py  tune.py
distill_knowledge/: README.cn.md  README.md  infer.py  mnist_prepare.py  train.py  utils.py
docs/: ThesisReproduction_CV.md  ThesisReproduction_Rec.md
drn/: README.md  drn.py  infer.py  reader.py  train.py  utils.py
dssm/: README.cn.md  README.md  index.html  infer.py  network_conf.py  reader.py  train.py  utils.py
dygraph/: dataloader_test.sh  dataloader_test_v1.7.sh  parse_dataloader_test_result.py  parse_dataloader_test_result_v1.7.py
fluid/: PaddleCV  PaddleRec  README.cn.md  README.cn.rst  README.md  neural_machine_translation_rnn_search  neural_machine_translation_transformer
fluid/PaddleCV/image_classification/capi/: CMakeLists.txt  README.md  data_reader.cc  data_reader.h  infer_image_classification.cc  stats.cc
generate_chinese_poetry/: README.md  README_EN.md  READ_ME_EN.md  generate.py  index.html  network_conf.py  preprocess.py  reader.py  train.py  utils.py
generate_sequence_by_rnn_lm/: README.md  README_cn.md  README_en.md  beam_search.py  config.py  generate.py  index.html  network_conf.py  reader.py  train.py  utils.py
globally_normalized_reader/: .gitignore  README.cn.md  README.md  basic_modules.py  beam_decoding.py  config.py  evaluate.py  featurize.py  index.html  infer.py  model.py  reader.py  train.py  vocab.py
how_to_use_capi/: README.md  index.html
hsigmoid/: README.md  READ_EN.md  hsigmoid_predict.py  index.html  infer.py  network_conf.py  train.py
image_caption/: README.cn.md  README.md  README1.md  data_provider.py  infer.py  train.py
image_classification/: README.md  alexnet.py  caffe2paddle.py  googlenet.py  inception_resnet_v2.py  inception_v4.py  index.html  infer.py  reader.py  resnet.py  resnext.py  se_resnext.py  squeezenet.py  train.py  vgg.py  xception.py
language_model/: README.md  beam_search.py  config.py  data_util.py  generate_text.py  infer.py  lm_ngram.py  lm_rnn.py  network_conf.py  ngram_language_model.py  reader.py  rnn_train.py  train.py  utils.py
legacy/: README.md
ltr/: README.md  README_EN.md  README_en.md  index.html  infer.py  lambdaRank.py  lambda_rank.py  metrics.py  ranknet.py  run_lambdarank.sh  run_ranknet.sh  train.py
modelcenter/: guide_cn.md  guide_en.md
mt_with_external_memory/: README.eng.md  README.md  data_utils.py  external_memory.py  index.html  infer.py  model.py  mt_with_external_memory.py  train.py
nce_cost/: .README.md.swp  README.md  README_en.md  index.html  infer.py  nce_conf.py  network_conf.py  train.py
neural_qa/: train.py  (+7 more)
(+11266 files in other folders)
